--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ canvas {display: block; }
 <body>
 <script src="lib/three.min.js"></script>
 <script src="lib/orbital-camera.js"></script>
+<script src="lib/tween.min.js"></script>
 <script src="pipes.js"></script>
 </body>
 </html>
