--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@ canvas {display: block; }
 <script src="lib/three.min.js"></script>
 <script src="lib/orbital-camera.js"></script>
 <script src="lib/tween.min.js"></script>
-<script src="pipes.js"></script>
+<script src="lib/dat.gui.min.js"></script>
+
+<script src="js/gui.js"></script>
+<script src="js/pipes.js"></script>
 </body>
 </html>
