--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@ canvas {display: block; }
 <title>Pipes3D</title>
 </head>
 <body>
-<script src="lib/three.min.js"></script>
-<script src="lib/orbital-camera.js"></script>
-<script src="lib/tween.min.js"></script>
-<script src="lib/dat.gui.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r68/three.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.5.1/dat.gui.js"></script>
 
-<script src="js/gui.js"></script>
-<script src="js/pipes.js"></script>
+<script src="lib/tween.min.js"></script>
+<script src="pipes.min.js"></script>
+
 </body>
 </html>
